--- a/app/views/home/index.haml
+++ b/app/views/home/index.haml
@@ -1,15 +1,13 @@
 .span-22.append-1.prepend-1.center.last
-	%h1 we do service exchange
+	%h1 where life plays fair, for free
 	%hr
 .span-24.last
 .span-12.center
 	%h2 
-		browse
-		= link_to 'open requests.', requests_path
+		= link_to 'Open requests.', requests_path
 .span-12.center.last
 	%h2 
-		view
-		= link_to 'awesome work.', requests_path
+		= link_to 'Awesome work.', requests_path
 .span-16.last.prepend-4.append-4
 	%hr
 	<object width="600" height="383"><param name="allowfullscreen" value="true" /><param name="allowscriptaccess" value="always" /><param name="movie" value="http://vimeo.com/moogaloop.swf?clip_id=9627525&amp;server=vimeo.com&amp;show_title=1&amp;show_byline=1&amp;show_portrait=0&amp;color=00ADEF&amp;fullscreen=1" /><embed src="http://vimeo.com/moogaloop.swf?clip_id=9627525&amp;server=vimeo.com&amp;show_title=1&amp;show_byline=1&amp;show_portrait=0&amp;color=00ADEF&amp;fullscreen=1" type="application/x-shockwave-flash" allowfullscreen="true" allowscriptaccess="always" width="600" height="383"></embed></object><p><a href="http://vimeo.com/9627525">BijectKarma</a> from <a href="http://vimeo.com/user3226476">Ethan Fast</a> on <a href="http://vimeo.com">Vimeo</a>.</p>
