--- a/app/views/requests/show.html.haml
+++ b/app/views/requests/show.html.haml
@@ -22,7 +22,7 @@
 		|
 		= link_to "Entries", request_entries_path(@req)
 		
-	- if current_user.admin
+	- if current_user and current_user.admin
 		%p
 			= link_to "Destroy it", request_path, :method => 'delete'
 			|
