--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -1,5 +1,6 @@
 %html
 	%head
+		%link{:href => "/favicon.ico"}
 		= stylesheet_link_tag 'ie'
 		= stylesheet_link_tag 'print'
 		= stylesheet_link_tag 'screen'
