--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -49,3 +49,8 @@ body {
   height: 60px;
   width: 120px;
   font-size: 1.3em; }
+
+.copyright {
+  padding: 20px;
+  color: white;
+  text-align: center; }
