--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -31,5 +31,5 @@
 					= link_to 'Contact' 
 					| 
 					=link_to 'About', about_path 
-					| Copyright 2010
+		.copyright Copyright 2010 BijectKarma
 	
