--- a/public/stylesheets/sass/style.sass
+++ b/public/stylesheets/sass/style.sass
@@ -50,9 +50,12 @@ body
 	width: 120px
 	font-size: 1.3em
 
-
 .copyright
 	padding: 20px
 	color: white
 	text-align: center
+	
+.thumb
+	max-height: 100px
+	max-width: 100px
 
