--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -11,9 +11,7 @@
 		.container
 			.span-24.onback
 				.span-12
-					%br
-					%h1 
-						= link_to 'BijectKarma', root_path
+					= image_tag '/logo.png'
 				.span-12.align_right.onback.last
 					%p
 						= render :partial => 'users/user_bar'
