--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -11,7 +11,8 @@
 		.container
 			.span-24.onback
 				.span-12
-					= image_tag '/logo.png'
+					%a{:href => root_path}
+						= image_tag '/logo.png'
 				.span-12.align_right.onback.last
 					%p
 						= render :partial => 'users/user_bar'
