--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -16,6 +16,10 @@ body {
   background-color: #CED6D6;
   color: black; }
 
+.grey {
+  background-color: #D8D8D8;
+  color: black; }
+
 .flash {
   margin-top: 10px; }
 
