add worksample to leaders

--- a/app/views/home/index.haml
+++ b/app/views/home/index.haml
@@ -7,7 +7,7 @@
 		%a{ :href => requests_path }
 			= image_tag '/bkopen.png', :alt => 'open requests'
 	.span-12.center.last
-		%a{ :href => requests_path }
+		%a{ :href => leader_path }
 			= image_tag '/bkwork.png', :alt => 'awesome work'
 .span-16.last.prepend-4.append-4
 	.center
