--- a/app/views/users/index.haml
+++ b/app/views/users/index.haml
@@ -24,5 +24,5 @@
 			%tr
 				- slice.each do |item|
 					%td
-						= augment_image item.entry.submission.url, :class => "medium_image"
+						= augment_image item.entry.submission.url, :class => "thumb"
 		
