git rid of annoying green flash

--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -17,7 +17,7 @@
 					%p
 						= render :partial => 'users/user_bar'
 			.span-24.center.last
-				%p.green.flash 
+				%p.grey.flash 
 					= flash[:notice]
 				%p.red.flash
 					= flash[:error]
